examples/docker1-kubernetes/volume-single-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mauricio-test1-deployment
  labels:
    app: mauricio-test1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mauricio-test1
  template:
    metadata:
      name: mauricio-test1-pod
      labels:
        app: mauricio-test1
    spec:
      restartPolicy: Always
      containers:
        - name: mauricio-test1-container
          image: mauriciotesta97/docker-test-1:latest
          imagePullPolicy: IfNotPresent
          resources:
              limits:
                memory: "128Mi"
                cpu: "500m"
          volumeMounts:
            - mountPath: /app/storage
              name: mauricio-test1-volume
      volumes:
        - name: mauricio-test1-volume
          hostPath:
            path: /volumes/mauricio-test1
            type: DirectoryOrCreate # cria a pasta se não existir
      # END PERSISTÊNCIA POR VOLUME
