examples/docker1-kubernetes/kubernetes.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mauricio-test1-deployment
  namespace: streaming-tests
  labels:
    app: mauricio-test1
  annotations:
    keel.sh/policy: force # útil para ambiente de testes. sempre que houver push faz deploy
spec:
  replicas: 1 # pra escalar a applicação
  selector:
    matchLabels: # serve pro deployment encontrar o recurso que está gerenciando
      app: mauricio-test1 # -------- 1 essa label...
  template: # exatamente a mesma coisa que tem no pod-example.yml
    metadata:
      name: mauricio-test1-pod
      namespace: streaming-tests
      labels:
        app: mauricio-test1 # -------- 2 ...precisa ser igual essa...
    spec:
      containers:
        - name: mauricio-test1-container
          image: mauriciotesta97/docker-test-1:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: mauricio-test1-pv
              mountPath: /app/user_data
      volumes:
        - name: mauricio-test1-pv
          persistentVolumeClaim:
            claimName: mauricio-test1-pvc
      restartPolicy: Always

---
# service
apiVersion: v1
kind: Service
metadata:
  name: mauricio-test1-service
  namespace: streaming-tests
spec:
  selector:
    app: mauricio-test1 # -------- 3 ... e essa
  ports:
    - port: 8080
  type: ClusterIP

---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mauricio-test1-ingress
  namespace: streaming-tests
  labels:
    name: mauricio-test1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: mauricio-test1.kub.app.builderall.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mauricio-test1-service
                port:
                  number: 8080
  tls:
    - hosts:
        - mauricio-test1.kub.app.builderall.io
      secretName: mauricio-test1-tls
